--- a/package.json
+++ b/package.json
@@ -4,17 +4,27 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "serverless offline start",
-    "deploy": "serverless deploy"
+    "test": "jest",
+    "dev": "serverless offline start --location .webpack/service",
+    "deploy": "serverless deploy",
+    "debug": "set SLS_DEBUG=* && node --inspect ./node_modules/serverless/bin/serverless offline -s dev"
   },
   "dependencies": {
     "aws-serverless-express": "^3.3.5",
     "express": "^4.16.4",
+    "sequelize": "^5.2.1",
     "serverless-mysql": "^1.2.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/preset-env": "^7.4.2",
+    "babel-loader": "^8.0.5",
+    "jest": "^24.5.0",
     "serverless": "^1.39.1",
     "serverless-offline": "^4.9.2",
-    "serverless-webpack": "^5.2.0"
+    "serverless-webpack": "^5.2.0",
+    "webpack": "^4.29.6",
+    "webpack-node-externals": "^1.7.2"
   }
 }
