--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,16 @@
 {
   "plugins": [
-    "@babel/plugin-syntax-dynamic-import"
+    "source-map-support",
+    "@babel/plugin-syntax-dynamic-import",
+    "@babel/plugin-transform-runtime"
   ],
   "presets": [
-    "@babel/preset-env"
+    [
+      "@babel/preset-env", {
+        "targets": {
+          "node": "8.10"
+        }
+      }
+    ]
   ]
 }
